--- a/app/src/main/res/drawable/onboarding_indicator_inactive_two.xml
+++ b/app/src/main/res/drawable/onboarding_indicator_inactive_two.xml
@@ -4,6 +4,6 @@
     <size android:width="@dimen/_8sdp"
         android:height="@dimen/_8sdp"/>
     <corners android:radius="25dp"/>
-    <solid android:color="@color/textTitle"/>
+    <solid android:color="@color/black"/>
 
 </shape>
