--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="ted_image_picker_primary_pressed">#B42254</color>
     <color name="placeholder_background">#dddddd</color>
     <color name="border_color">#E6E6E6</color>
+    <color name="divider_color_global">#1A000000</color>
 </resources>
