--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -106,7 +106,7 @@
                 android:focusable="true"
                 android:fontFamily="@font/darkergrotesque_bold"
                 android:gravity="center"
-                android:paddingTop="@dimen/_10sdp"
+                android:padding="@dimen/_10sdp"
                 android:text="Open Preference Settings"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_18ssp" />
