--- a/app/src/main/res/drawable/chat_message_input_drawable.xml
+++ b/app/src/main/res/drawable/chat_message_input_drawable.xml
@@ -1,4 +1,7 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <stroke android:width="1dip" android:color="#1A000000"/>
-    <corners android:radius="@dimen/_20sdp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke
+        android:width="1dip"
+        android:color="#1A000000" />
+    <corners android:radius="@dimen/_20sdp" />
 </shape>
