--- a/app/src/main/res/layout/row_prompt_profile__left.xml
+++ b/app/src/main/res/layout/row_prompt_profile__left.xml
@@ -82,6 +82,7 @@
             android:layout_weight="1"
             android:clickable="true"
             android:focusable="true"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
             android:paddingTop="@dimen/_10sdp"
             android:paddingBottom="@dimen/_10sdp"
             android:src="@drawable/person" />
