--- a/app/src/main/res/layout/activity_full_screen_image_view.xml
+++ b/app/src/main/res/layout/activity_full_screen_image_view.xml
@@ -37,10 +37,10 @@
         android:focusable="true"
         android:background="?android:attr/selectableItemBackgroundBorderless"/>
 
-    <com.jsibbold.zoomage.ZoomageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/imageview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
